--- a/gradle.properties
+++ b/gradle.properties
@@ -32,3 +32,6 @@ LICENSE_URL='http://www.apache.org/licenses/LICENSE-2.0.txt'
 DEVELOPER_ID=tangentLu
 DEVELOPER_NAME=tangentLu
 DEVELOPER_EMAIL=tangentLu@outlook.com
+
+
+org.gradle.jvmargs = -Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M" --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
